--- a/tasks/bash.yml
+++ b/tasks/bash.yml
@@ -1,6 +1,5 @@
 ---
-- name: Copy bash file
-  copy:
-    src: files/env/bash.sh
-    dest: ~/.scripts/env/bash
-    mode: "0750"
+- name: Copy env file
+  include_tasks: _copy_env_file.yml
+  vars:
+    name: bash
