--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -18,8 +18,8 @@
     groups:
       - docker
     append: yes
-- name: Copy docker file
-  copy:
-    src: files/env/docker.sh
-    dest: ~/.scripts/env/docker
-    mode: "0750"
+
+- name: Copy env file
+  include_tasks: _copy_env_file.yml
+  vars:
+    name: docker
