--- a/tasks/github.yml
+++ b/tasks/github.yml
@@ -3,8 +3,7 @@
   pacman:
     name: 
       - hub
-- name: Copy github file
-  copy:
-    src: files/env/github.sh
-    dest: ~/.scripts/env/github
-    mode: "0750"
+- name: Copy env file
+  include_tasks: _copy_env_file.yml
+  vars:
+    name: github
