--- a/tasks/go.yml
+++ b/tasks/go.yml
@@ -3,8 +3,7 @@
   pacman:
     name: 
       - go
-- name: Copy go file
-  copy:
-    src: files/env/go.sh
-    dest: ~/.scripts/env/go
-    mode: "0750"
+- name: Copy env file
+  include_tasks: _copy_env_file.yml
+  vars:
+    name: go
