--- a/tasks/zoxide.yml
+++ b/tasks/zoxide.yml
@@ -4,8 +4,7 @@
     name: 
       - zoxide
       - fzf
-- name: Copy zoxide file
-  copy:
-    src: files/env/zoxide.sh
-    dest: ~/.scripts/env/zoxide
-    mode: "0750"
+- name: Copy env file
+  include_tasks: _copy_env_file.yml
+  vars:
+    name: zoxide
