--- a/files/starship.config.toml
+++ b/files/starship.config.toml
@@ -40,3 +40,10 @@ disabled = true
 
 [terraform]
 symbol = "TF "
+
+[hostname]
+ssh_only = false
+
+[username]
+show_always = true
+format = "[$user]($style)@"
