--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -14,3 +14,8 @@
     path: ~/.zshrc
     line: "source ~/.scripts/zshrc"
     insertbefore: BOF
+- name: Set zsh the default shell
+  become: yes
+  user:
+    name: "{{ target_username.stdout }}"
+    shell: /usr/bin/zsh
