--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -18,5 +18,5 @@
 - name: Set zsh the default shell
   become: yes
   user:
-    name: "{{ target_username.stdout }}"
+    name: "{{ target_username.stdout | default('me') }}"
     shell: /usr/bin/zsh
