--- a/tasks/kubernetes.yml
+++ b/tasks/kubernetes.yml
@@ -6,7 +6,4 @@
       - kubectl
       - kubectx
 - name: Install kubernetes utilities cont'd
-  become: yes
-  aur:
-    name:
-      - kubeval
+  command: pamac install --no-confirm kubeval
