--- a/tasks/zoxide.yml
+++ b/tasks/zoxide.yml
@@ -5,7 +5,4 @@
     name: 
       - fzf
 - name: Install zoxide & fzf cont'd
-  become: yes
-  aur:
-    name:
-      - zoxide
+  command: pamac install --no-confirm zoxide
