--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -1,4 +1,8 @@
 ---
+- name: Copy env file
+  include_tasks: tasks/_copy_env_file.yml
+  vars:
+    name: "docker"
 - name: Install docker
   become: yes
   pacman:
