--- a/tasks/github.yml
+++ b/tasks/github.yml
@@ -1,4 +1,8 @@
 ---
+- name: Copy env file
+  include_tasks: tasks/_copy_env_file.yml
+  vars:
+    name: "github"
 - name: Install github CLI
   become: yes
   pacman:
