--- a/tasks/nextcloud.yml
+++ b/tasks/nextcloud.yml
@@ -1,4 +1,8 @@
 ---
+- name: Copy env file
+  include_tasks: tasks/_copy_env_file.yml
+  vars:
+    name: "nextcloud"
 - name: Install nextcloud client
   pacman:
     name:
